--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <div class="section">
         <h2>Politique de confidentialité</h2>
-        <p>Keskonmat respecte votre vie privée. Consultez notre <a href="https://github.com/NicolasRaze/keskonmat-privacy">politique de confidentialité</a> pour en savoir plus.</p>
+        <p>Keskonmat respecte votre vie privée. Consultez notre <a href="https://nicolasraze.github.io/keskonmat-privacy/">politique de confidentialité</a> pour en savoir plus.</p>
     </div>
 
     <footer>
